@@ -1,3 +1,10 @@
+2020-08-05 'basxto' Riedel <sdcc@basxto.de>
+
+	* src/z80/peep.c:
+	  Fix notUsed('f') for jr/jp (Bug #3095)
+	* src/z80/peeph-gbz80.def:
+	  Add rules for regression tests.
+
 2020-08-05 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* support/regression/tests/bug-2363.c:
